# parachain-template

./: .gitignore  README.md  start.sh
pallets/relayer-registry/: Cargo.toml
pallets/relayer-registry/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
scripts/: dev-mode.sh
