[package]
name = "pallet-relayer-registry"
version = "0.1.0"
description = "Relayer Registry Pallet for Highway Protocol"
authors = ["Highway Team"]
homepage = "https://github.com/highway-protocol"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/highway-protocol/parachain-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"serde",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
